# compy-learn

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  install_deps.sh  setup.py
compy/: __init__.py
compy/datasets/: __init__.py  dataset.py  dataset_test.py  devmap.py  devmap_test.py
compy/models/: __init__.py  model.py
compy/models/graphs/: __init__.py  pytorch_dgl_model.py  pytorch_dgl_model_test.py  pytorch_geom_model.py  pytorch_geom_model_test.py  tf_graph_model.py  tf_graph_model_test.py
compy/models/graphs/tf/: test_utils.py  utils.py
compy/models/graphs/tf/cell/: prediction_cell.py  prediction_cell_test.py
compy/models/graphs/tf/layer/: embedding_layer.py  gnn_model_layer.py  propagation_model_layer.py  propagation_model_layer_test.py
compy/models/seqs/: __init__.py  tf_seq_model.py  tf_seq_model_test.py
compy/representations/: __init__.py  ast_graphs.py  ast_graphs_test.py  common.py  common_test.py  llvm_graphs.py  llvm_graphs_test.py  llvm_seq.py  llvm_seq_test.py  syntax_seq.py  syntax_seq_test.py
compy/representations/extractors/: CMakeLists.txt  __init__.py  extractors.cc  extractors_test.py
compy/representations/extractors/clang_ast/: CMakeLists.txt  clang_extractor.cc  clang_extractor.h  clang_extractor_test.cc  clang_graph_frontendaction.cc  clang_graph_frontendaction.h  clang_seq_frontendaction.cc  clang_seq_frontendaction.h
compy/representations/extractors/common/: clang_driver.cc  clang_driver.h  clang_driver_test.cc  common_test.h  visitor.h
compy/representations/extractors/llvm_ir/: CMakeLists.txt  llvm_extractor.cc  llvm_extractor.h  llvm_extractor_test.cc  llvm_graph_funcinfo.cc  llvm_graph_funcinfo.h  llvm_graph_pass.cc  llvm_graph_pass.h  llvm_pass_test.cc  llvm_seq_pass.cc  llvm_seq_pass.h
examples/: devmap_exploration.py
tests/: test_runner.py
